--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,11 +13,11 @@ server:
 #      ddl-auto: update
 
 spring:
-datasource:
-  driverClassName: com.mysql.jdbc.Driver
-  url: jdbc/mysql://${DB_HOST:localhost}:3306/productdb
-  username: root
-  password: Thakur@7
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://${DB_HOST:localhost}:3306/productdb
+    username: root
+    password: Thakur@7
   jpa:
     hibernate.ddl-auto: update
     generate-ddl: true
