--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,12 +13,31 @@ server:
 #      ddl-auto: update
 
 spring:
+  jmx:
+    enabled: true
+
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://${DB_HOST:localhost}:3306/productdb
     username: root
     password: Thakur@7
+
   jpa:
     hibernate.ddl-auto: update
     generate-ddl: true
     show-sql: true
+
+  application:
+    name: PRODUCT-SERVICE
+
+
+eureka:
+  instance:
+    prefer-ip-address: true
+
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+
+    service-url:
+      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
