--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -30,14 +30,16 @@ spring:
   application:
     name: PRODUCT-SERVICE
 
+  config:
+    import: configserver:http://localhost:9296
 
-eureka:
-  instance:
-    prefer-ip-address: true
-
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-
-    service-url:
-      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#
+#    service-url:
+#      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
